--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -15,6 +15,8 @@ td {
 }
 .container_content {
   width: 1000px;
+  display: flex;
+  flex-flow: column;
   // border: 1px solid #A9E163;
 }
 .container_body {
@@ -27,12 +29,13 @@ td {
   border-radius: 10px;
 }
 .window:first-child {
-  margin-top: 50px;
+  // margin-top: 50px;
 }
 .window {
   border: 1px solid #A9E163;
   margin-top: 10px;
   border-radius: 10px;
+  width: 50%;
 }
 .title {
   color: #609B17;
