--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,11 @@
   <!-- <p id="notice"><%= notice %></p> -->
 
   <div class="container_content">
+    <div class="container_posts">
   <% @posts.each do |post| %>
+
+
+
   <div class="window">
     <div class="box_title">
 
@@ -39,8 +43,10 @@
 
 
 
+
   <% end %>
   </div>
+    </div>
   <br>
   <div class="NewPost">
   <%= link_to 'Новый пост', new_post_path %>
