--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -89,6 +89,7 @@
   </div>
  <p class="main_usual"> В каких источниках вы бы стали искать информацию <br>о растениях и уходе за ними?</p>
 </div>
+<div class="image_interview"></div>
 
 <p class="big">Проблемы</p>
 <div class="clouds">
@@ -242,10 +243,7 @@
 </div>
   </div>
 
-  <div class="line">
-
-<div class="tag"> рейтинговая система </div>
-  </div>
+  
 
   <div class="line">
 
