--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -7,6 +7,17 @@
   font-style: normal;
   font-weight: normal;
 }
+.image_interview {
+  position: absolute;
+  top: 1700px;
+  filter: drop-shadow(0px 4px 4px rgba(75, 124, 15, 0.19));
+  width: 498px;
+  height: 340px;
+  background-image: url('interview2.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  left: 850px;
+}
 .main_container {
   background-image: url('big_frame.svg');
   width: 1098px;
