--- a/app/assets/stylesheets/promo.scss
+++ b/app/assets/stylesheets/promo.scss
@@ -2,7 +2,232 @@ body {
   margin: 0;
   padding: 0;
 }
+.main {
+  margin-top: -50px;
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+}
+.button {height: 66px;
+  padding-left: 28px;
+    padding-right: 28px;
+  position: absolute;
+  top: 405px;
+  background: #87CE2E;
+  border-radius: 40px;
+  color: white;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  justify-content: space-around;
+}
+.button_text {
+  font-size: 20px;
+  margin-right: 15px;
+}
+.mini_text {
+      position: absolute;
+      top: 295px;
+      font-family: Helvetica;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 18px;
+      color: #425807;
+}
+.main_text_promo {
+  font-weight: bold;
+font-size: 74px;
+line-height: 104px;
+position: absolute;
+color: #425807;
+}
+.lid {
+  margin-top: 200px;
+  display: flex;
+  justify-content: center;
+}
+.number_prior {
+  display: flex;
+  align-items: center;
+}
+.priority {
+  display: flex;
+  margin-top: 100px;
+  justify-content: space-between;
+}
+.together {
+  margin-top: 100px;
+}
+.cloud_priority{
+  // display: flex;
+  // justify-content: flex-start;
+}
+.image_cloud {
+  background-image: url('cloud22.svg');
+  background-repeat: no-repeat;
+  width: 604px;
+height: 71px;
+display: flex;
+align-items: center;
+padding-left: 30px;
+margin-top: 20px;
+}
+.image_cloud2 {
+  background-image: url('cloud33.svg');
+  background-repeat: no-repeat;
+  width: 604px;
+height: 85px;
+display: flex;
+align-items: center;
+padding-left: 30px;
+margin-top: 20px;
+}
+.text_image_cloud {
+  font-size: 18px;
+line-height: 23px;
 
+color: #FFFFFF;
+}
+.together {
+  margin-bottom: 179px;
+}
+.img_book {
+  padding-right: 24px;
+}
+.img_book_un {
+
+}
+.image_cloud3 {
+  background-image: url('cloud44.svg');
+  background-repeat: no-repeat;
+  width: 604px;
+height: 69px;
+display: flex;
+align-items: center;
+padding-left: 30px;
+margin-top: 20px;
+}
+.blocks_book {
+  display: flex;
+  margin-top: 30px;
+
+}
+.container_book {
+  margin-top: 100px;
+  display: flex;
+}
+.book {
+  display: flex;
+  justify-content: space-between;
+}
+.container_sub {
+  margin-bottom: 100px;
+}
+.cont {
+  display: inline-flex;
+  justify-content: center;
+}
+
+.sub {
+  display: flex;
+  justify-content: center;
+}
+.text_plant {
+  margin-left: 60px;
+}
+#subscriber_email {
+  width: 400px;
+height: 34px;
+font-size: 20px;
+padding-left: 20px;
+border: 1px solid darkgreen;
+border-radius: 40.5px;
+margin-right: 30px;
+}
+.subscribe {
+  margin-top: 150px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.end {
+  font-weight: bold;
+  font-size: 35px;
+  line-height: 54px;
+  text-align: center;
+}
+.main_small {
+  font-weight: normal;
+font-size: 21px;
+line-height: 24px;
+
+color: #000000;
+}
+.text_container {
+  margin-bottom: 80px;
+}
+.text_plant_small {
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 39px;
+  color: #000000;
+  margin-bottom: 30px;
+}
+.img_book_unusual {
+  padding-left: 8px;
+}
+.text_image_cloud {
+  font-size: 18px;
+line-height: 23px;
+
+color: #FFFFFF;
+}
+.circle {
+
+  width: 41px;
+  height: 41px;
+border-radius: 50px;
+background: #E3E3E3;
+}
+.text_image {
+  font-size: 40px;
+line-height: 52px;
+font-weight: bold;
+color: #425807;
+margin-left: 50px;
+}
+.text {
+  display: flex;
+  align-items: center;
+}
+.time {
+  font-weight: normal;
+font-size: 13px;
+line-height: 15px;
+
+color: #000000;
+margin-left: 15px;
+}
+.nick {
+  font-weight: bold;
+font-size: 13px;
+line-height: 15px;
+margin-left: 15px;
+color: #000000;
+}
+.text_promo_lid {
+  font-size: 46px;
+  line-height: 60px;
+
+  color: #425807;
+  font-weight: bold;
+}
+.main_screen {
+  background-image: url('mainframe.svg');
+  height: 557px;
+  width: 580px;
+  background-repeat: no-repeat;
+}
 .container_header {
   // padding-left: 150px;
   // padding-right: 150px;
