--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,8 +2,8 @@
 <%= render 'header' %>
 
 
-<div class="container_body">
-  <h1>Актуальные вопросы</h1>
+<div class="container_body_posts">
+  <h1 class="actual">Актуальные вопросы</h1>
   <!-- <p id="notice"><%= notice %></p> -->
 
   <div class="container_content">
@@ -19,23 +19,21 @@
       <%= post.title %>
     </div>
 
+
+    </div>
+
+  <div class="box_content">
+
+
+
+    <div class="user_name">
+      <%= post.name %>
+    </div>
     <div class="functions">
       <td><%= link_to 'Показать', post %></td>
       <td><%= link_to 'Изменить', edit_post_path(post) %></td>
       <td><%= link_to 'Удалить', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </div>
-    </div>
-
-  <div class="box_content">
-
-    <div class="text_content">
-      <%= post.content %>
-    </div>
-
-    <div class="user_name">
-      <%= post.name %>
-    </div>
-
   </div>
 
 
