--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -462,9 +462,17 @@ justify-content: flex-end;
 .margin {
   margin-top: 100px;
 }
-.content_posts {
+.preview {
+  position: relative;
+}
+.title_preview {
+  position: absolute;
   width: 100%;
+}
+.content_posts {
+  width: 800px;
   margin-right: 15px;
+  margin: 0 auto;
 }
 .content_posts_show {
   width:59%;
