--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,50 +5,49 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag Ckeditor.cdn_url %>
   </head>
-
   <body>
-  <div class="top_menu">
-
-  <%= link_to posts_path do %>
-  <div class="logo">
-
- <%= image_tag 'logo.png', :class => "logo"  %>
-
-  </div>
-  <div class="menu">
-    <%= link_to "Вопросы", posts_path %> <br>
-  </div>
-  <div class="right_buttons">
-    <% if user_signed_in?%>
-    <div class="NewPost">
-    <%= link_to 'Новый пост', new_post_path %>
+  <nav>
+  <div class="right_section_navbar">
+    <div class="logo">
+      <%= link_to posts_path do %>
+      <%= image_tag 'logo.png', :class => "logo"  %>
+      <% end %>
     </div>
-    <% end %>
-
+    <div class="right_links">
+      <%= link_to posts_path do %>
+        <%= link_to "Вопросы", posts_path, :class => "right_link" %>
+        <% end %>
+        <%= link_to articles_path do %>
+        <%= link_to "Наши статьи", articles_path %>
+      <% end %>
+    </div>
   </div>
-<% end %>
-
-  <div class="account">
-    <% if user_signed_in? %>
-    <%= link_to current_user do %>
-     <%= image_tag (current_user.avatar.small_thumb.url), :class => "avatar_round" %>
-    <% end %>
-    <% else %>
-      <%= link_to 'Войти', new_user_session_path %> | <%= link_to 'Зарегистрироваться', new_user_registration_path %>
-    <% end %>
+  <div class="left_buttons">
+    <div class="right_buttons">
+     <% if user_signed_in?%>
+       <div class="NewPost">
+         <%= link_to 'Задать вопрос', new_post_path, :class => "white"  %>
+       </div>
+     <% end %>
+    </div>
+    <div class="account">
+     <% if user_signed_in? %>
+       <%= link_to current_user do %>
+       <%= image_tag (current_user.avatar.small_thumb.url), :class => "avatar_round" %>
+     <% end %>
+     <% else %>
+        <%= link_to 'Войти', new_user_session_path %> | <%= link_to 'Зарегистрироваться', new_user_registration_path %>
+     <% end %>
+    </div>
   </div>
+  </nav>
 
-    <% Category.where(display_in_navbar: true).each do |cat| %>
-<%= link_to cat.name, posts_path(category: cat.name) %> |
-<% end %>
-
-</div>
     <%= yield %>
+
 
   </body>
 </html>
