Сделала внешний вид карточек на странице вопросов. Настроила их работу и отображение

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -55,8 +55,16 @@ font-size: 18px;
 font-size: 18px;
  }
  .table_tag {
-   width: 15%;font-weight: 300;
-font-size: 18px;
+   position: absolute;
+   margin: 26px;
+   font-weight: 500;
+   font-size: 14px;
+   padding-top: 8px;
+   padding-bottom: 8px;
+   padding-left: 15px;
+   padding-right: 15px;
+   background: white;
+   border-radius: 20px;
  }
  .table_active {
    width: 30%;
@@ -98,6 +106,5 @@ display: flex;justify-content: space-between;
  @import "@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');";
  body {
    font-family: 'Raleway', sans-serif;
-   font-size: 18px;
-   font-weight: 400;
+   background: #FBF9F4;
  }
