--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -267,11 +267,35 @@ font-size: 20px;
 .window {
   margin-top: 20px;
   width: 100%;
+  border-radius: 10px;
   margin-left: 10px;
-  display: flex;
   margin-bottom: 10px;
     align-items: center;
   background: #FFFFFF;
+}
+.count_comments {
+  font-size: 20px;
+  margin-left: 4px;
+}
+.commentes {
+  display: flex;
+  align-items: center;
+}
+.active_buttons_post {
+  margin-left: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.doing_answer {
+  display: flex;
+  margin-right: 30px;
+  align-items: center;
+}
+hr {
+  border: 1px solid #F3F3F3;
+  margin-top: 30px;
 }
 .email {
   width: 20%;
@@ -284,9 +308,20 @@ font-size: 20px;
   font-size: 18px;
   margin: 10px 0px 10px 15px;
 }
+.title_of_answer {
+  font-style: normal;
+font-weight: 500;
+font-size: 26px;
+margin-right: 30px;
 
-.user_name {
+line-height: 31px;
+font-feature-settings: 'pnum' on, 'lnum' on;
+  color: white;
+}
 
+.user_name_style {
+  font-size: 14px;
+  color: white;
 }
 .images {
   width: 100px!important;
@@ -347,9 +382,16 @@ font-size: 20px;
   margin-top: -15px;
   margin-bottom:50px;
 }
+.content_of_answer {
+  font-size: 18px;
+  color: #62636B;
+
+}
 .element_active_table {
-  display: flex;
-  width: 50px;
+  font-size: 20px;
+  margin-left: 30px !important;
+  margin-top: 30px !important;
+  margin-right: 30px !important;
   margin: 10px;
   justify-content: space-between;
   align-items: center;
@@ -381,8 +423,6 @@ width: 104%;
 margin-top: 20px;
 }
 .active {
-  display: flex;
-  width: 45%;
   justify-content: space-between;
 }
 .active_buttons {
@@ -472,9 +512,31 @@ justify-content: flex-end;
   margin-top: 100px;
 }
 .preview {
+  height: 220px;
+  border-radius: 10px;
   position: relative;
+  background-image: url('post.image.url');
+}
+.bottom_of_answer {
+  bottom: 0px;
+  font-size: 14px;
+  color: white;
+  font-weight: 400;
+  margin-left: 30px;
+  margin-bottom: 15px;
+  position: absolute;
+}
+.avatar_post {
+  margin-right: 13px;
+  margin-top: 4px;
+}
+.user_info {
+  display: flex;
+  align-items: center;
 }
 .title_preview {
+  display: flex;
+  align-items: flex-end;
   position: absolute;
   width: 100%;
 }
@@ -526,6 +588,8 @@ a {
   color: white;
   background: #738A5F;
   border-radius: 8px;
+  font-size: 17px;
+  font-weight: 500;
   align-items: center;
   justify-content: center;
   display: flex;
