--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -76,13 +76,19 @@ display: flex;justify-content: space-between;
    width: 25px;
    margin-right: 10px;
  }
+ 
  nav {
    display: flex;
    justify-content: space-between;
    height: 77px;
+   position: fixed;
+   top: 0;
+   width: 86%;
+   z-index: 1;
    border-bottom: 1px solid rgba(0, 0, 0, 0.07);
    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.08);
    padding-left: 100px;
+   background: white;
    padding-right: 100px;
    align-items: center;
  }
