--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -5,10 +5,16 @@ body {
   margin: 0;
   padding: 0;}
 
+p {
+  font-size: 18px;
+  color: #62636B;
+  font-weight: 400 !important;
+}
+
 body, p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px; }
+  font-size: 18px;
+  color: #62636B;
+  font-weight: 400 !important }
 
 pre {
   background-color: #eee;
