Ура, получилось отображать картинки + сделала хедер комонентом

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Articles</h1>
-<%= react_component 'A_Tags', { categories: @categories }
- %>
+<%= react_component 'A_Tags', { categories: @categories } %>
+
 
 <table>
   <thead>
