--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,15 @@
 
 <div class="container_body_posts">
   <div class="content_posts">
-      <%= react_component 'M_CategoryMenu', {categories: @categories, category: @category } %>
-      <%= react_component 'Tests' , {categories: @categories, category: @category }  %>
     <div class="container_content">
+
 
       <div class="container_posts">
     <% @posts.each do |post| %>
 
     <div class="window">
+      <%= react_component 'A_Category', { posts: @posts }%>
+
         <div class="preview" style='background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%), url(<%= post.image.url %>); background-size: cover !important;' >
           <div class="top_of_answer">
             <div class="table_tag">
