--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -8,13 +8,12 @@ body {
 p {
   font-size: 18px;
   color: #62636B;
-  font-weight: 400 !important;
 }
 
 body, p, ol, ul, td {
   font-size: 18px;
   color: #62636B;
-  font-weight: 400 !important }
+}
 
 pre {
   background-color: #eee;
