--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,12 +3,12 @@
   <div class="content_posts">
     <div class="container_content">
 
+      <%= react_component 'M_QuestionCard', {posts: @posts, categories: @categories } %>
 
       <div class="container_posts">
     <% @posts.each do |post| %>
 
     <div class="window">
-      <%= react_component 'A_Category', { posts: @posts }%>
 
         <div class="preview" style='background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%), url(<%= post.image.url %>); background-size: cover !important;' >
           <div class="top_of_answer">
