--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -2,6 +2,57 @@ body {
   margin: 0;
   padding: 0;
 }
+.A_H2--white{
+  font-weight: 500;
+  font-size: 60px;
+  color: white;
+  margin: 0px;
+}
+.TextBlock {
+  padding-top: 115px;
+}
+.topmenu_button {
+  width: 40% !important;
+  height: 51px;
+  margin-top: 20px;
+  border-radius: 10px;
+  margin-left: auto;
+    margin-right: auto;
+  background: #738A5F;
+  font-size: 20px;
+  color: white !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.P_Tag_width {
+  width: 400px;
+}
+.A_PTag--white {
+  font-weight: 400;
+  font-size: 20px;
+  color: white;
+  width: 550px;
+  margin: 0 auto !important;
+  text-align: center;
+  margin: 0px;
+}
+.black {
+  color: black;
+}
+.background-top {
+  text-align: center;
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.3)), url('topmenu.png');
+  background-size: cover;
+  border-radius: 30px;
+  width: 100%;
+  height: 543px;
+}
+.container_main {
+  width: 87%;
+  margin-top: 120px !important;
+  margin: 0 auto;
+}
 .content_box {
   width: 300px;
   background-color: green;
