--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -10,11 +10,8 @@
       </ul>
     </div>
   <% end %>
+  <%= react_component 'O_Postform', { post: @post, categories: @categories } %>
 
-  <div class="field">
-    <p class="text_new">Название</p>
-    <%= form.text_field :name %>
-  </div>
   <div>
     <p class="text_new">Превью</p>
   <%= form.file_field :image %>
@@ -23,16 +20,13 @@
     <p class="text_new">Статус</p>
       <%= form.select :category_id, Category.pluck(:name, :id) %>
   </div>
-  
-
   <div class="field">
     <p class="text_new">Контент</p>
     <%= form.cktext_area :content %>
   </div>
 
-
-
   <div class="actions">
     <%= form.submit %>
   </div>
+
 <% end %>
