Сделала компоненты для post view

--- a/app/assets/stylesheets/M_Category.scss
+++ b/app/assets/stylesheets/M_Category.scss
@@ -1,11 +1,4 @@
-.CategoryMenu {
-  display: flex;
-  margin-top: 72px;
-}
-.category_content {
-  background: #FFFFFF;
-  border-radius: 18px;
-  font-size: 14px;
-  font-weight: 500;
-  padding: 8px 20px 8px 20px;
+.category--default{
+  color: var(--color-black);
+  background-color: var(--color-sea-foam);
 }
