--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -37,6 +37,25 @@ body {
   text-align: center;
   margin: 0px;
 }
+.container_body_new_post {
+  width: 75%;
+  margin: 0 auto;
+  margin-top: 50px;
+
+}
+.new_post {
+  display: flex;
+}
+.left_new_post {
+  width: 50%;
+}
+.right_new_post {
+  margin-top: 90px;
+  margin-left: 70px;
+}
+.input_form {
+  background: white;
+}
 .black {
   color: black;
 }
@@ -369,9 +388,8 @@ hr {
   width: 30%;
 }
 .title {
-
   font-size: 18px;
-  margin: 10px 0px 10px 15px;
+  line-height: 10px;
 }
 .title_of_answer {
   font-style: normal;
@@ -604,6 +622,37 @@ justify-content: flex-end;
   display: flex;
   align-items: center;
 }
+.content--black {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 21px;
+  color: black;
+}
+.content--grey {
+  font-weight: 500;
+  font-size: 18px;
+  color: #62636B;
+}
+.post_view {
+  background: white;
+  border-radius:0px 0px 11px 11px;
+}
+.title--black {
+  color: black;
+  font-weight: 500;
+  font-size: 30px;
+}
+.title--white {
+  color: white;
+  font-weight: 500;
+  font-size: 26px;
+}
+.post_image {
+border-radius: 29px 29px 0px 0px;
+height: 336.03px;
+width: 100%;
+object-fit: cover !important;
+}
 .title_preview {
   display: flex;
   align-items: flex-end;
@@ -614,11 +663,14 @@ justify-content: flex-end;
   width: 800px;
   margin-right: 15px;
   margin: 0 auto;
+  margin-top: 100px;
 }
-.content_posts_show {
-  width:59%;
-  margin-right: 15px;
-  margin-left: 50px;
+.text_of_post {
+  margin-left: 30px;
+  margin-bottom: 20px;
+}
+.show {
+  width: 70%;
 }
 #post_title {
   width: 100%;
@@ -690,11 +742,7 @@ table {
 }
 
 input[type="submit"] {
-  width: 127px;
-  height: 39px;
-
-  border: none;
-  background: #A9E163;
-  border-radius: 50px;
+  background: #738A5F;
+  border: 1px solid #E0E0E0;
 
 }
