--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,14 +1,11 @@
 
-<div class="container_body_theme">
+<div class="container_body_new_post">
   <div class="back">
    <%= link_to 'Back', posts_path %>
   </div>
   <div class="box_theme">
 
-    <p class="heading">Создать публикацию</p>
+    
   </div>
 <%= render 'form', post: @post %>
-
-
-
 </div>
