--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= javascript_include_tag Ckeditor.cdn_url %>
   </head>
   <body>
-  <%= react_component 'O_Header', {current_user: @current_user} %>
+  <%= react_component 'O_Header', {current_user: current_user} %>
 
 
     <!-- <div class="right_buttons">
