--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -14,6 +14,8 @@
   <strong>Content:</strong>
   <%= @article.content %>
 </p>
+<h2>Comments</h2>
+<%= render @article.article_comments %>
 
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
