--- a/app/views/promo/index.html.erb
+++ b/app/views/promo/index.html.erb
@@ -1,3 +1,3 @@
 <div class="container_main">
-      <%= react_component 'M_TopMenu'%>
+      <%= react_component 'M_TopMenu', {categories: @categories}%>
 </div>
