--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,7 +2,14 @@
 
 <h1>Articles</h1>
 <%= react_component 'A_Tags', { categories: @categories } %>
-
+<%= link_to 'New Hashtag', new_hashtag_path %>
+<% Hashtag.where(display_in_navbar: true).each do |cat| %>
+<%= link_to cat.name, articles_path(hashtag: cat.name) %> |
+<% end %>
+<h2>All Categories</h2>
+<% Hashtag.all.each do |cat| %>
+	<%= link_to cat.name, articles_path(hashtag: cat.name) %> <br>
+<% end %>
 
 <table>
   <thead>
@@ -11,6 +18,7 @@
       <th>Title</th>
       <th>Content</th>
       <th colspan="3"></th>
+
     </tr>
   </thead>
 
@@ -20,6 +28,7 @@
         <td><%= article.name %></td>
         <td><%= article.title %></td>
         <td><%= article.content %></td>
+        <td><%= article.hashtag.name %></td>
         <td><%= link_to 'Show', article %></td>
         <td><%= link_to 'Edit', edit_article_path(article) %></td>
         <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
