Отображение нескольких постов на главной странице

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -302,6 +302,9 @@ input[type="text"] {
   padding: 10px;
   border: 1px #F3F3F3;
 }
+.top {
+  margin-top: 20px;
+}
 input[type="email"] {
   background: #F3F3F3;
   width: 100%;
