--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,7 @@
-
+<%= react_component 'M_TopArticle'%>
 <div class="container_articles">
-<h1>Articles</h1>
+
 <%= react_component 'O_ArticleView', {articles: @articles} %>
 </div>
 <%= link_to 'New Article', new_article_path %>
+<%= react_component 'O_Footer' %>
